Kub-Commynity/onlyoffice-control-panel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.groups.yml
    kompose.version: 1.26.1 (a9d05d509)  
  labels:
    io.kompose.service: onlyoffice-control-panel
  name: onlyoffice-control-panel  
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: onlyoffice-control-panel
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.groups.yml
        kompose.version: 1.26.1 (a9d05d509)      
      labels:
        io.kompose.network/onlyoffice: "true"
        io.kompose.service: onlyoffice-control-panel
    spec:
      containers:
        - env:
            - name: ONLYOFFICE_CORE_MACHINEKEY
              value: core_secret
          image: onlyoffice/controlpanel:latest
          name: onlyoffice-control-panel
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 800m
              memory: 800Mi
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: onlyoffice-control-panel-claim0
            - mountPath: /var/www/onlyoffice/Data
              name: controlpanel-data
            - mountPath: /var/log/onlyoffice
              name: controlpanel-log
      restartPolicy: Always
      volumes:
        - name: onlyoffice-control-panel-claim0
          persistentVolumeClaim:
            claimName: onlyoffice-control-panel-claim0
        - name: controlpanel-data
          persistentVolumeClaim:
            claimName: controlpanel-data
        - name: controlpanel-log
          persistentVolumeClaim:
            claimName: controlpanel-log
status: {}
