Kub-Commynity/onlyoffice-community-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.groups.yml
    kompose.version: 1.26.1 (a9d05d509) 
  labels:
    io.kompose.service: onlyoffice-community-server
  name: onlyoffice-community-server
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
    - name: "5222"
      port: 5222
      targetPort: 5222
  selector:
    io.kompose.service: onlyoffice-community-server
status:
  loadBalancer: {}
