Kub-Commynity/onlyoffice-control-panel-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.groups.yml
    kompose.version: 1.26.1 (a9d05d509) 
  labels:
    io.kompose.service: onlyoffice-control-panel
  name: onlyoffice-control-panel  
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    io.kompose.service: onlyoffice-control-panel
status:
  loadBalancer: {}
