Kub-Commynity/onlyoffice-mysql-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.mysql.yml
    kompose.version: 1.26.1 (a9d05d509) 
  labels:
    io.kompose.service: onlyoffice-mysql-server
  name: onlyoffice-mysql-server
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306    
  selector:
    io.kompose.service: onlyoffice-mysql-server
status:
  loadBalancer: {}
