Kub-Commynity/onlyoffice-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: onlyoffice
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/onlyoffice: "true"
  podSelector:
    matchLabels:
      io.kompose.network/onlyoffice: "true"
